<resources>
    <string name="app_name">Polariss</string>
    <string name="description_img_photo">Imagen de la tienda</string>
    <string name="description_store_add">Crear Tienda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Nombre de la tienda</string>
    <string name="helper_required">Requerido</string>
    <string name="hint_phone">Telefono</string>
    <string name="hint_website">URL de Sitio</string>
    <string name="hint_photo_url">URL de la imagen</string>
    <string name="edit_store_title_add">Agregar Tienda</string>
    <string name="menu_save">Save</string>
    <string name="edit_store_message_save_succes">Tienda agregada correctamente</string>
    <string name="hint_origen">ORIGEN</string>
    <string name="helper_text_origen">"CIUDAD DE ORIGEN"</string>
    <string name="hint_destino">DESTINO</string>
    <string name="hint_fechaidad">IDA</string>
    <string name="hint_fecharegreso">REGRESO</string>
    <string name="hint_npasajeros">NP</string>
    <string name="hint_clase">CLASE</string>
    <string name="title">Cotización de Vuelos\n</string>
    <string name="hint_maleta">EQUIPAJE</string>
    <string name="titleReservasHoteles">Cotización de Hotel</string>
    <string name="hint_h_ubicacion">UBICACIÓN</string>
    <string name="hint_h_hotel">NOMBRE DEL HOTEL</string>
    <string name="hint_h_nhabitaciones">CUARTOS</string>
    <string name="hint_h_Paquete">KIT</string>
    <string name="hint_h_descripcion">DESCRIPCION</string>
    <string name="text_label_1">Vuelos</string>
    <string name="text_label_2">Hoteles</string>
    <string name="text_label_3">Promociones</string>
    <string name="title_activity_login">LoginActivity</string>


</resources>